[package]
name = "rs-webpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
oxc_allocator = {version = "0.31.0", features = ["serialize"]}
oxc_ast = "0.31.0"
oxc_codegen = "0.31.0"
oxc_parser = "0.31.0"
oxc_semantic = "0.31.0"
oxc_span = {version = "0.31.0", features = ["serialize"]}
oxc_traverse = "0.31.0"
pico-args = "0.5.0"
serde_json = "1.0.129"
