[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rswebpack_error        = { version = "0.1.0", path = "../rswebpack_error" }
rswebpack_macros       = { version = "0.1.0", path = "../rswebpack_macros" }
rswebpack_hook  = { version = "0.1.0", path = "../rswebpack_hook" }
tokio = {workspace = true}
tracing            = { workspace = true}